--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<script src="/js/accordeon.js" defer></script>
 	<script src="/js/timer.js" defer></script>
 	<script src="/js/scroll.js" defer></script>
+	<script src="/example.js" defer></script>
+	<script src="/js/sendForm.js" defer></script>
+
 </head>
 
 <body>
